--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,2 @@
-<!--The content below is only a placeholder and can be replaced.-->
-<div style="text-align:center">
-  <h1>
-    Welcome to the {{ title }} website!
-  </h1>
-  <img width="300" alt="Album Logo" src="https://cdn0.iconfinder.com/data/icons/books-elements/154/nature-album-photo-book-512.png">
-</div>
+<app-nav-bar></app-nav-bar>
+<router-outlet></router-outlet>
