--- a/src/app/nav-bar/nav-bar.component.css
+++ b/src/app/nav-bar/nav-bar.component.css
@@ -3,15 +3,27 @@ ul {
   margin: 0;
   padding: 0;
   width: 200px;
-  background-color: #f1f1f1;
 }
 
 li a {
-  display: inline-block;
-  width: 60px;
+  display: block;
+  color: #000;
+  padding: 8px 16px;
+  text-decoration: none;
 }
 
+/* Change the link color on hover */
 li a:hover {
-  background-color: #555;
+  background-color: rgb(82, 177, 106);
+  color: white;
+}
+
+.active {
+  background-color: #4CAF50;
+  color: white;
+}
+
+nav {
+  background-color: #4CAF50;
   color: white;
 }
