--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -1,4 +1,21 @@
-<ul>
-    <li><a [routerLink]="['/welcome']">Welcome</a></li>
-    <li><a [routerLink]="['/albums']">Albums</a></li>
-</ul>
+<nav class="navbar navbar-expand-lg navbar-dark indigo">
+  <a class="navbar-brand" [routerLink]="['/welcome']"
+                          [routerLinkActive]="['active']">Albums App</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
+    aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarText">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item active">
+        <a class="nav-link" [routerLink]="['/welcome']"
+        [routerLinkActive]="['active']">Welcome
+        </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" [routerLink]="['/albums']"
+        [routerLinkActive]="['active']">Albums</a>
+      </li>
+    </ul>
+  </div>
+</nav>
