--- a/src/app/nav-bar/nav-bar.component.css
+++ b/src/app/nav-bar/nav-bar.component.css
@@ -14,7 +14,7 @@ li a {
 
 /* Change the link color on hover */
 li a:hover {
-  background-color: rgb(82, 177, 106);
+  background-color: rgb(17, 167, 55);
   color: white;
 }
 
@@ -26,4 +26,11 @@ li a:hover {
 nav {
   background-color: #4CAF50;
   color: white;
+}
+
+#natpis {
+  float: right;
+  font-family: "Comic Sans MS", cursive, sans-serif;
+  font-size: 20px;
+  margin-right: 50px;
 }
