--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -1,21 +1,22 @@
 <nav class="navbar navbar-expand-lg navbar-dark indigo">
   <a class="navbar-brand" [routerLink]="['/welcome']"
-                          [routerLinkActive]="['active']">Albums App</a>
+                          [routerLinkActive]="['active']">Album App</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
     aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarText">
     <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
+      <li class="nav-item">
         <a class="nav-link" [routerLink]="['/welcome']"
-        [routerLinkActive]="['active']">Welcome
+        [routerLinkActive]="['active']">Home
         </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" [routerLink]="['/albums']"
-        [routerLinkActive]="['active']">Albums</a>
+        <a class="nav-link" [routerLink]="['/album']"
+        [routerLinkActive]="['active']">Album</a>
       </li>
     </ul>
+    <span id="natpis">Organise your photos.</span>
   </div>
 </nav>
