--- a/src/app/album/album.component.css
+++ b/src/app/album/album.component.css
@@ -1,10 +1,17 @@
 .photo {
-  display: inline-block;
-  margin: 10px;
+  width: 160px;
 }
 
-#title {
-  margin-left: auto;
-  margin-right: auto;
-  width: 150px;
+figure {
+  padding: 5px;
+  display: table;
+}
+
+figure img {
+  display: block;
+}
+
+figcaption {
+  display: table-caption;
+  caption-side: bottom;
 }
