--- a/src/app/photo/photo.component.css
+++ b/src/app/photo/photo.component.css
@@ -1,9 +1,34 @@
 .container {
+  margin: 0 auto;
   margin-top: 20px;
+  text-align: center;
 }
 
 img {
   margin-left: auto;
   margin-right: auto;
   display: block;
+}
+
+.input-div {
+  text-align: center;
+  margin-right: auto;
+  margin-left: auto;
+  margin-top: 20px;
+}
+
+input {
+  width: 300px;
+}
+
+button {
+  display: inline-block;
+}
+
+.btn-success {
+  margin-left: 250px;
+}
+
+textarea {
+  width: 300px;
 }
