--- a/src/app/nav-bar/nav-bar.component.css
+++ b/src/app/nav-bar/nav-bar.component.css
@@ -10,9 +10,10 @@ li a {
   color: #000;
   padding: 8px 16px;
   text-decoration: none;
+  width: 95px;
+  text-align: center;
 }
 
-/* Change the link color on hover */
 li a:hover {
   background-color: rgb(17, 167, 55);
   color: white;
