--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -16,6 +16,14 @@
         <a class="nav-link" [routerLink]="['/album']"
         [routerLinkActive]="['active']">Album</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" [routerLink]="['/album', 'new']"
+        [routerLinkActive]="['active']">New Photo</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" [routerLink]="['/contact']"
+        [routerLinkActive]="['active']">Contact</a>
+      </li>
     </ul>
     <span id="natpis">Organise your photos.</span>
   </div>
