--- a/src/app/photo/photo.component.html
+++ b/src/app/photo/photo.component.html
@@ -1,10 +1,12 @@
-<div class="container">
+<div class="container" *ngIf="this.photo">
   <h3>Photo Details</h3>
   <img [src]="this.photo?.url">
   <div class="input-div">
     <textarea [(ngModel)]="this.photo.title"></textarea>
   </div>
-  <div>
+  <div style="margin-top: 20px;">
     <button style="float:left;" class="btn btn-success" (click)="onSave()">Save</button>
+    <button id="cancel" style="margin-left: 20px; float:left" class="btn" (click)="onCancel()">Cancel</button>
+    <button style="float:right; margin-right: 250px;" class="btn btn-danger" (click)="onDelete()">Delete</button>
   </div>
 </div>
