--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 @import "~bootstrap/dist/css/bootstrap.css";
 @import "../node_modules/ngx-toastr/toastr.css";
+
+body {
+  background-image: url('./assets/background-image.gif');
+}
