--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -1,7 +1,8 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<div style="text-align:center">
+<div style="text-align:center; margin-top: 20px;">
   <h1>
-    Welcome to the {{ title }} website!
+    Welcome to the place where you can <br/>
+     Create, Read, Update and Delete your photos
   </h1>
   <br>
   <br>
